--- a/source/css/style.css
+++ b/source/css/style.css
@@ -333,7 +333,7 @@ input, textarea {
   padding: 0.5em;
 }
 
-input[type=text], input[type=search], input[type=url], input[type=number], textarea {
+input[type=text], input[type=search], input[type=submit], input[type=url], input[type=number], textarea {
   -webkit-appearance: none;
 }
 
